chore: new configuration for ktlint working with test too