@@ -7,18 +7,22 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.spring' version '1.7.22'
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'com.adarshr.test-logger' version '3.2.0'
-    id 'org.jmailen.kotlinter' version '3.14.0'
 }
 
 group = 'com.shoppinglist'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '18'
 
+configurations {
+    ktlint
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    ktlint "com.pinterest:ktlint:0.49.1"
     // Align versions of all Kotlin components
     implementation 'org.springframework.boot:spring-boot-starter-graphql'
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -47,6 +51,13 @@ dependencies {
 
 }
 
+task installGitHooks(type: Copy, group: "git-hooks") {
+    from new File(rootProject.rootDir, 'scripts/pre-commit')
+    into { new File(rootProject.rootDir, '.git/hooks')}
+    fileMode 0775
+}
+check.dependsOn installGitHooks
+
 tasks.withType(KotlinCompile) {
     kotlinOptions {
         freeCompilerArgs = ['-Xjsr305=strict']
@@ -60,11 +71,18 @@ tasks.named('test') {
     }
 }
 
-tasks.named('check') {
-    dependsOn 'installKotlinterPrePushHook'
+task ktlint(type: JavaExec, group: "verification") {
+    description = "Check Kotlin code style."
+    classpath = configurations.ktlint
+    mainClass = "com.pinterest.ktlint.Main"
+    args "src/**/*.kt"
 }
+check.dependsOn ktlint
 
-kotlinter {
-    ignoreFailures = false
-    reporters = ['checkstyle', 'plain']
+task ktlintFormat(type: JavaExec, group: "verification") {
+    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    description = "Fix Kotlin code style deviations."
+    classpath = configurations.ktlint
+    mainClass = "com.pinterest.ktlint.Main"
+    args "-F", "src/**/*.kt"
 }
